<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.dartsscore.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/score_to_10"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dartsWhite"/>
            <LinearLayout
                android:id="@+id/score_to_20"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/dartsGreen">
                <TextView
                    android:id="@+id/outer_bull"
                    android:text="@string/outer_bull"
                    style="@style/TextOfValuesBlack"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dartsWhite"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/dartsRed">
                <TextView
                    android:id="@+id/inner_bull"
                    android:text="@string/inner_bull"
                    style="@style/TextOfValuesBlack"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/dartsWhite">
        <RadioGroup
            android:id="@+id/players_group"
            android:layout_margin="@dimen/radio_group_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:background="@drawable/toggle_widget_outline">
            <RadioButton
                android:padding="@dimen/radio_button_padding"
                android:id="@+id/player_one_button"
                android:paddingRight="@dimen/radio_button_padding_outer"
                android:paddingEnd="@dimen/radio_button_padding_outer"
                android:paddingLeft="@dimen/radio_button_padding_inner"
                android:paddingStart="@dimen/radio_button_padding_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_widget_red"
                android:button="@null"
                android:text="@string/button_player_one"
                android:onClick="onRadioButtonClicked"
                android:gravity="center"
                style="@style/TextOfValuesBlack"
                />
            <RadioButton
                android:padding="@dimen/radio_button_padding"
                android:paddingLeft="@dimen/radio_button_padding_outer"
                android:paddingStart="@dimen/radio_button_padding_outer"
                android:paddingRight="@dimen/radio_button_padding_inner"
                android:paddingEnd="@dimen/radio_button_padding_inner"
                android:id="@+id/player_two_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_widget_green"
                android:button="@null"
                android:text="@string/button_player_two"
                android:onClick="onRadioButtonClicked"
                android:gravity="center"
                style="@style/TextOfValuesBlack"
                />

        </RadioGroup>


        <TextView
            android:id="@+id/player_one_score"
            android:text="@string/starting_score"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/score_text_padding"
            style="@style/ScoreTextStyle"/>
        <TextView
            android:id="@+id/player_two_score"
            android:text="@string/starting_score"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/score_text_padding"
            style="@style/ScoreTextStyle"/>
        <Button
            android:id="@+id/undo"
            android:text="@string/button_undo"
            style="@style/TextOfValuesBlack"
            android:onClick="undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/reset"
            android:text="@string/button_reset"
            style="@style/TextOfValuesBlack"
            android:onClick="reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_shots_left"
            style="@style/TextOfValuesWhite"/>
        <TextView
            android:id="@+id/shots_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:text="@string/starting_shots"
            style="@style/ScoreTextStyle"/>
    </RelativeLayout>

</LinearLayout>
